crates/config/tests/snapshots/block_string_1_folded_keep_none_emptyln_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-1-folded-keep-none-emptyln-dedent

## Input

```mical
key >+
  hello

other val

```

## JSON

```json
{
  "key": "hello\n\n",
  "other": "val"
}
```

vim:ft=markdown
