crates/config/tests/snapshots/block_string_1_folded_strip_emptyln_wsln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-1-folded-strip-emptyln-wsln-eof

## Input

```mical
key >-

  hello
 

```

## JSON

```json
{
  "key": "\nhello"
}
```

vim:ft=markdown
