crates/config/tests/snapshots/block_string_1_folded_strip_wsln_none_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-1-folded-strip-wsln-none-dedent

## Input

```mical
key >-
  hello
other val

```

## JSON

```json
{
  "key": "hello",
  "other": "val"
}
```

vim:ft=markdown
