crates/config/tests/snapshots/block_string_1_literal_clip_wsln_wsln_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-1-literal-clip-wsln-wsln-dedent

## Input

```mical
key |
  hello
other val

```

## JSON

```json
{
  "key": "hello\n",
  "other": "val"
}
```

vim:ft=markdown
