crates/config/tests/snapshots/block_string_1_literal_keep_emptyln_wsln_eof_nonl.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-1-literal-keep-emptyln-wsln-eof-nonl

## Input

```mical
key |+
  hello
```

## JSON

```json
{
  "key": "hello\n"
}
```

vim:ft=markdown
