crates/config/tests/snapshots/block_string_1_literal_keep_wsln_emptyln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-1-literal-keep-wsln-emptyln-eof

## Input

```mical
key |+
 
  hello


```

## JSON

```json
{
  "key": "\nhello\n\n"
}
```

vim:ft=markdown
