crates/config/tests/snapshots/block_string_1_literal_keep_wsln_none_eof_nonl.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-1-literal-keep-wsln-none-eof-nonl

## Input

```mical
key |+
 
  hello
```

## JSON

```json
{
  "key": "\nhello\n"
}
```

vim:ft=markdown
