crates/config/tests/snapshots/block_string_1_literal_strip_emptyln_emptyln_eof_nonl.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-1-literal-strip-emptyln-emptyln-eof-nonl

## Input

```mical
key |-

  hello

```

## JSON

```json
{
  "key": "\nhello"
}
```

vim:ft=markdown
